--- a/src/index.css
+++ b/src/index.css
@@ -7,11 +7,56 @@
 
 body {
   font-family: "Hero New ";
+  background: #f0f8ff;
+}
+
+.btn-spinner {
+  width: 20px;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+/* LOADER HERE */
+
+.loader {
+  border: 10px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 10px solid #222840;
+  width: 72px;
+  height: 72px;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+  margin: 2rem auto;
+}
+
+.nothing {
+  color: #1b1c1d;
+  font-size: 0.875rem;
+  font-weight: 400;
+  line-height: 1.5;
+  margin: 2rem auto;
+  text-align: center;
+}
+
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 /* FONTS HERE */
